--- a/Project/Project/Project.vcxproj
+++ b/Project/Project/Project.vcxproj
@@ -71,10 +71,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CameraController.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Manager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CameraController.h" />
     <ClInclude Include="Externs.h" />
     <ClInclude Include="Manager.h" />
   </ItemGroup>
