Added camera movement and rotation
- Cameras now use a different rotation system (yaw and pitch).
- No matter how many keys are pressed the user always moves the same
speed
- Time class added, with FPS counter, delta time and epoch time

--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -82,6 +82,7 @@
     <ClInclude Include="MeshRenderer.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="SoundManager.h" />
+    <ClInclude Include="Time.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="Vector3.h" />
   </ItemGroup>
