Added an OBJ Loader, fixed some SoundManager errors and commented SoundManager.h
Added an OBJ Loader that can parse OBJ files, fixed some SoundManager
errors and commented the SoundManager.h file.

--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -80,6 +80,7 @@
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="MeshRenderer.h" />
+    <ClInclude Include="ModelLoader.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="Time.h" />
