Updated graphics class and others
- Updated everything to no longer access graphcis externs directly
- Graphics is now a class not a namespace
- FPS counter actually works now

--- a/Project/Project/Project.vcxproj
+++ b/Project/Project/Project.vcxproj
@@ -82,6 +82,13 @@
     <Text Include="fragment.txt" />
     <Text Include="vertex.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\Assets\Checker.png" />
+    <Image Include="..\..\Assets\Man.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="..\..\Assets\Song.mp3" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
